# dots

./: .gitignore  COPYING  Makefile.am  Makefile.bak  Makefile.in  README.md  configure  configure.ac  run
src/: Configurator.cpp  Configurator.h  Dot.cpp  Dot.h  DotConf.cpp  DotConf.h  GaussFunc.cpp  GaussFunc.h  RandGenerator.cpp  RandGenerator.h  Simulator.cpp  Simulator.h  main.cpp
