bin_PROGRAMS = dots
AM_CXXFLAGS = -I./src -Wall -std=c++11

dots_SOURCES = \
	src/Configurator.cpp src/Configurator.h \
	src/Dot.cpp src/Dot.h \
	src/DotConf.cpp src/DotConf.h \
	src/GaussFunc.cpp src/GaussFunc.h \
	src/RandGenerator.cpp src/RandGenerator.h \
	src/Simulator.cpp src/Simulator.h src/main.cpp
dots_LDFLAGS = -lGL -lGLU -lglut

